--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <p>Bienvenidos a Introducción a la Informática</p> 
     <h1>ENCABEZADO</h1>
-    
+
     <ul class="ListaRandom"> Lista de Cosas Random</ul>
 
     <li id="Cosa1"> Cosa Random 1</li>
